--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,5 @@ ros_ip: "{{ ansible_ssh_host }}"
 ros_master_uri: "http://{{ ansible_ssh_host }}:11311"
 
 cpu_arch: "latest"
+
+docker_name: "ros_master"
