Added molecule test

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
+ros_ip: '{{ ansible_ssh_host }}'
 
-ros_ip: "{{ ansible_ssh_host }}"
-ros_master_uri: "http://{{ ansible_ssh_host }}:11311"
+ros_master_uri: 'http://{{ ansible_ssh_host }}:11311'
 
-cpu_arch: "latest"
+cpu_arch: 'latest'
 
-docker_name: "ros_master"
+docker_name: 'ros_master'
