--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,14 @@
 ---
+- name: install docker pip
+  pip:
+    name: docker
 
 - name: Start ROS master docker container
   docker_container:
-    name: "{{ docker_name }}"
-    image: "frankjoshua/ros-master:{{ cpu_arch }}"
-    network_mode: "host"
-    restart_policy: "unless-stopped"
+    name: '{{ docker_name }}'
+    image: 'frankjoshua/ros-master:{{ cpu_arch }}'
+    network_mode: 'host'
+    restart_policy: 'unless-stopped'
     env:
-      ROS_MASTER_URI: "{{ ros_master_uri }}"
-      ROS_IP: "{{ ros_ip }}"
+      ROS_MASTER_URI: '{{ ros_master_uri }}'
+      ROS_IP: '{{ ros_ip }}'
