--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,6 +1,8 @@
 ---
 dependency:
   name: galaxy
+  role-file: requirements.yml
+  requirements-file: requirements.yml
 driver:
   name: docker
 platforms:
