Added arm64 support

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,9 @@ arch:
 
 env:
   matrix:
-    # - MOLECULE_DISTRO: ubuntu2004
+    - MOLECULE_DISTRO: ubuntu2004
     - MOLECULE_DISTRO: ubuntu1804
-    # - MOLECULE_DISTRO: ubuntu1604
-
-before_install:
-  # Upgrade Docker to work with docker-py.
-  - curl https://gist.githubusercontent.com/geerlingguy/ce883ad4aec6a5f1187ef93bd338511e/raw/36612d28981d92863f839c5aefe5b7dd7193d6c6/travis-ci-docker-upgrade.sh | sudo bash
+    - MOLECULE_DISTRO: ubuntu1604
 
 install:
   # Install test dependencies.
@@ -23,6 +19,3 @@ install:
 script:
   # Run tests.
   - molecule test
-
-notifications:
-  webhooks: https://galaxy.ansible.com/api/v1/notifications/
