Added exception for itempotence

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: Get DEB architecture
   shell: dpkg --print-architecture
   register: deb_architecture
+  changed_when: false
 
 - debug: 
     msg: "{{ deb_architecture.stdout }}"
