--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ arch:
 
 env:
   matrix:
-    - MOLECULE_DISTRO: ubuntu2004
-    - MOLECULE_DISTRO: ubuntu1804
-    - MOLECULE_DISTRO: ubuntu1604
+    - MOLECULE_DISTRO: '20.04'
+    - MOLECULE_DISTRO: '18.04'
+    - MOLECULE_DISTRO: '16.04'
 
 install:
   # Install test dependencies.
