--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,7 +7,7 @@ driver:
   name: docker
 platforms:
   - name: instance
-    image: geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu1804}-ansible
+    image: ubuntu:${MOLECULE_DISTRO:-18.04}
     command: ${MOLECULE_DOCKER_COMMAND:-"sleep infinity"}
     privileged: true
     pre_build_image: true
