--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,6 +20,7 @@
 - name: Ensure docker deamon is running
   shell: service docker start
   ignore_errors: yes
+  changed_when: false
 
 - name: Start ROS master docker container
   docker_container:
