Added work around for arm64 on Travis CI

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,13 +9,16 @@ platforms:
   - name: instance
     image: ubuntu:${MOLECULE_DISTRO:-20.04}
     command: ${MOLECULE_DOCKER_COMMAND:-"sleep infinity"}
-    privileged: true
+    # privileged is not supported in arm64 on Travis CI
+    # privileged: true
     pre_build_image: true
     capabilities:
       - SYS_ADMIN
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
       - /var/lib/docker
+      # This is a work around for Travis CI arm64 privileged issue :(
+      - /var/run/docker.sock:/var/run/docker.sock
 provisioner:
   name: ansible
 verifier:
