Improved verify and added cleanup

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -4,11 +4,18 @@
 - name: Verify
   hosts: all
   tasks:
-    - name: Test ros master
-      shell: '{% raw %}$(docker inspect -f ''{{.State.Running}}'' ros_master) = "true"{% endraw %}'
-      register: cmd_result
-      ignore_errors: yes
+    - name: Get infos on container
+      docker_container_info:
+        name: ros_master
+      register: result
 
-    - name: ROS master should be running
+    - name: Does container exist?
       assert:
-        that: '{{ cmd_result.rc }} == 0'
+        that: result.exists
+
+    - name: Check if container is healthy
+      assert:
+        that: "'{{ result.container['State']['Health']['Status'] }}' == 'healthy'"
+      when: result.exists
+      retries: 3
+      delay: 15
