--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-ros_ip: '{{ ansible_ssh_host }}'
-ros_master_uri: 'http://{{ ansible_ssh_host }}:11311'
+ros_ip: "{{ ansible_default_ipv4.address | default('127.0.0.1') }}"
+ros_master_uri: 'http://{{ ros_ip }}:11311'
 docker_name: 'ros_master'
 
 # Edition can be one of: 'ce' (Community Edition) or 'ee' (Enterprise Edition).
