--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,4 +4,8 @@ galaxy_info:
   license: Apache-2.0
   min_ansible_version: 2.9
   galaxy_tags: []
+  platforms:
+    - name: Ubuntu
+      versions:
+        - all
 dependencies: []
