Added ignore unreachable for cleanup

--- a/molecule/default/cleanup.yml
+++ b/molecule/default/cleanup.yml
@@ -2,9 +2,10 @@
 - name: Cleanup
   hosts: all
   gather_facts: no
+  ignore_errors: true
+  ignore_unreachable: true
   tasks:
     - name: Remove container
       docker_container:
         name: ros_master
         state: absent
-      ignore_errors: yes
