Setting ip to 127.0.0.1 for tests

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -24,3 +24,5 @@
     - name: 'Include ansible-role-ros-master'
       include_role:
         name: 'ansible-role-ros-master'
+      vars:
+        ros_ip: 127.0.0.1
