--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,7 +10,7 @@ lint: |
   yamllint .
 platforms:
   - name: instance
-    image: ubuntu:${MOLECULE_DISTRO:-18.04}
+    image: ubuntu:${MOLECULE_DISTRO:-16.04}
     command: ${MOLECULE_DOCKER_COMMAND:-"sleep infinity"}
     # privileged is not supported in arm64 on Travis CI
     # privileged: true
@@ -24,5 +24,8 @@ platforms:
       - /var/run/docker.sock:/var/run/docker.sock
 provisioner:
   name: ansible
+  # Turn on Diff for extra debugging
+  options:
+    D: True
 verifier:
   name: ansible
