--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -3,14 +3,18 @@
 
 - name: Verify
   hosts: all
+
+  vars:
+    container_name: 'ros_master'
+
   tasks:
     - name: Wait for container to start
       wait_for:
-        timeout: 30
+        timeout: 45
 
     - name: Get infos on container
       docker_container_info:
-        name: ros_master
+        name: '{{ container_name }}'
       register: result
 
     - name: Does container exist?
