--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,12 +27,13 @@
   ignore_errors: yes
   changed_when: false
 
-- name: Start ROS master docker container
+- name: Start {{ docker_name }} docker container
   docker_container:
     name: '{{ docker_name }}'
-    image: 'frankjoshua/ros-master'
+    image: '{{ docker_image }}'
     network_mode: 'host'
     restart_policy: 'unless-stopped'
+    pull: '{{ pull_image }}'
     env:
       ROS_MASTER_URI: '{{ ros_master_uri }}'
       ROS_IP: '{{ ros_ip }}'
