--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,8 @@
 ros_ip: "{{ ansible_default_ipv4.address | default('127.0.0.1') }}"
 ros_master_uri: 'http://{{ ros_ip }}:11311'
 docker_name: 'ros_master'
+pull_image: false
+docker_image: 'frankjoshua/ros-master:latest'
 
 # Edition can be one of: 'ce' (Community Edition) or 'ee' (Enterprise Edition).
 docker_edition: 'ce'
