--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,6 +3,8 @@ dependency:
   name: galaxy
   role-file: requirements.yml
   requirements-file: requirements.yml
+driver:
+  name: docker
 lint: |
   set -e
   yamllint .
