--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ env:
 
 install:
   # Install test dependencies.
-  - pip install molecule yamllint ansible-lint docker molecule-docker
+  - python3 -m pip install "molecule[ansible]"
+  - python3 -m pip install yamllint ansible-lint docker molecule-docker
 
 script:
   # Run tests.
